# drumster

./: Cargo.toml  README.md
samples/: format-concept-v2.csv  format-concept.csv  rock.csv  rosana-beat.csv
src/: drum_machine.rs  drum_player.rs  main.rs  parse_drum_machine.rs  ui.rs
src/drum_machine/: drum_machine_builder.rs  drum_player.rs  model.rs  parse_drum_machine.rs  trigger_strategy.rs
