[package]
name = "drumster"
version = "0.1.0"
edition = "2021"
author = "XYL0neer"
about = "CLI drum machine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
rodio = "0.16.0"
crossterm = "0.26.0"
